# Spyctral

./: .gitignore  .pyproject.toml.swp  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  fisa_reader.py  get_data.py  get_data_starlight.py  header-template  holamundo  leerFisaFile.py  prueba.py  prueba1_claseobj.py  pyproject.toml  setup.py  spyctral.py  tox.ini
.github/workflows/: Build_Publish.yml  GH_CI.yml  Testing.yml  sphinx.yml
Add_on/: case_SC_Starlight.out
Draft/: pruebas.py
add_on/: Reader_Starlight.ipynb  Tutorial.ipynb  case_SC_FISA.fisa  case_SC_Starlight_notas.out  daset_info.txt  nombres_starlight.txt  pasos_uso.txt  plot_idea
docs/: conf.py  index.rst  modules.rst  requirements.txt  spyctral.core.rst  spyctral.io.rst  spyctral.rst  spyctral.utils.rst
docs/_dynamic/: README.rst
docs/notebook/: Quick installation.rst  Tutorial.ipynb  Tutorial_new.ipynb
old/: ejemplo.py  spyctral.py
old/Add_on/: case_SC_FISA.fisa_1.txt
spyctral/: __init__.py  core.py  io.py
spyctral/core/: __init__.py  __init___.py  core.py  plot.py
spyctral/extractors/: __init__.py  core.py  ext_fisa_age.py  ext_stl_age.py
spyctral/io/: fisa.py  star_light.py  starlight.py
spyctral/utils/: __init__.py  bunch.py
tests/: conftest.py  test_core.py  test_io.py  test_read_fisa.py
tests/Add_on/: Reader_Starlight.ipynb  case_SC_FISA.fisa  case_SC_Starlight.out  case_SC_Starlight_notas.out  fisa_1.fisa  fisa_2.fisa  fisa_3.fisa  fisa_4.fisa  star_light_analisis_test.ipynb
tests/core/: test_core.py  test_plot.py
tests/datasets/: __init__.py  case_SC_Starlight_2.out  case_SC_Starlight_broken.out  case_SC_Starlight_oneSSP.out  fisa_1.fisa  fisa_2.fisa  fisa_4.fisa
tests/datasets/set_STARLIGHT_files/: M_BC03_0_6_20_18_.out  M_BC03_10_35_20_20_.out  M_BC03_10_3_20_17_.out  M_BC03_17_45_10_25_.out  M_BC03_17_8_10_16_.out  M_BC03_19_26_40_4_.out  M_BC03_19_35_40_19_.out  M_BC03_19_49_20_5_.out  M_BC03_1_40_40_24_.out  M_BC03_20_18_10_27_.out  M_BC03_21_46_10_29_.out  M_BC03_3_40_30_28_.out  M_BC03_4_39_30_20_.out  M_BC03_7_28_40_21_.out  M_BC03_7_4_20_14_.out  M_BC03_9_90_72_.out  M_BC03_9_90_73_.out  M_BC03_9_90_74_.out  M_BC03_9_90_75_.out  M_BC03_9_90_76_.out  M_BC03_9_90_77_.out  M_BC03_9_90_78_.out  M_BC03_9_90_79_.out  M_BC03_9_90_7_.out  M_BC03_9_90_80_.out  M_BC03_9_90_81_.out  M_BC03_9_90_82_.out  M_BC03_9_90_83_.out  M_BC03_9_90_84_.out  M_BC03_9_90_85_.out  M_BC03_9_90_86_.out  M_BC03_9_90_87_.out  M_BC03_9_90_88_.out  M_BC03_9_90_89_.out  M_BC03_9_90_8_.out  M_BC03_9_90_90_.out  M_BC03_9_90_91_.out  M_BC03_9_90_92_.out  M_BC03_9_90_93_.out  M_BC03_9_90_94_.out  (+5 more)
tests/extractors/: test_core.py  test_ext_age.py  test_ext_fisa_age.py
tests/fisa_files/: fisa_2.fisa  fisa_3.fisa
tests/io/: test_fisa.py  test_starlight.py
tests/utils/: test_bunch.py
